--- a/haskell/lahnparty-icfp2014.cabal
+++ b/haskell/lahnparty-icfp2014.cabal
@@ -9,6 +9,6 @@ cabal-version: >= 1.10
 library
   default-language: Haskell2010
   hs-source-dirs:   src
-  build-depends:    base >= 4.6
+  build-depends:    base >= 4.6, Word
   exposed-modules:
     LahnParty.GCC.Syntax
