--- a/haskell/lahnparty-icfp2014.cabal
+++ b/haskell/lahnparty-icfp2014.cabal
@@ -1,6 +1,5 @@
 name:          lahnparty-icfp2014
 version:       0.0
-license:       None
 author:        LahnParty team, University of Marburg
 maintainer:    icfp14@lists.uni-marburg.de
 build-type:    Simple
@@ -9,6 +8,6 @@ cabal-version: >= 1.10
 library
   default-language: Haskell2010
   hs-source-dirs:   src
-  build-depends:    base >= 4.6, Word
+  build-depends:    base >= 4.6
   exposed-modules:
     LahnParty.GCC.Syntax
