Add GCC machine state.

--- a/haskell/lahnparty-icfp2014.cabal
+++ b/haskell/lahnparty-icfp2014.cabal
@@ -10,4 +10,5 @@ library
   hs-source-dirs:   src
   build-depends:    base >= 4.6
   exposed-modules:
-    LahnParty.GCC.Syntax
+    LahnParty.GCC.Syntax,
+    LahnParty.GCC.State
