--- a/haskell/lahnparty-icfp2014.cabal
+++ b/haskell/lahnparty-icfp2014.cabal
@@ -8,12 +8,12 @@ cabal-version: >= 1.10
 library
   default-language: Haskell2010
   hs-source-dirs:   src
-  build-depends:    base >= 4.6, lens >= 4.3, mtl >= 2.1.2
+  build-depends:    base >= 4.6, lens >= 4.3, mtl >= 2.1.2, 
+    array >= 0.5.0.0
   exposed-modules:
     LahnParty.GCC.Syntax,
     LahnParty.GCC.State,
-    LahnParty.GCC.Machine
-    LahnParty.GHC.Syntax
-    LahnParty.GHC.Machine
+    LahnParty.GHC.Syntax,
+    LahnParty.GHC.Machine,
     LahnParty.GCC.Monad,
     LahnParty.GCC.Exec
