--- a/haskell/lahnparty-icfp2014.cabal
+++ b/haskell/lahnparty-icfp2014.cabal
@@ -9,10 +9,7 @@ library
   default-language: Haskell2010
   hs-source-dirs:   src
   build-depends:
-    base  >= 4.6,
-    array >= 0.5.0.0,
-    lens  >= 4.3,
-    mtl   >= 2.1.2
+    base, array, lens, mtl >= 2.2
   exposed-modules:
     LahnParty.GCC.Syntax,
     LahnParty.GCC.State,
