--- a/haskell/lahnparty-icfp2014.cabal
+++ b/haskell/lahnparty-icfp2014.cabal
@@ -19,3 +19,12 @@ library
     LahnParty.GCC.Exec,
     LahnParty.GHC.Syntax,
     LahnParty.GHC.Machine
+
+test-suite tests
+  default-language: Haskell2010
+  type:             exitcode-stdio-1.0
+  hs-source-dirs:   test
+  main-is:          tests.hs
+  build-depends:
+    lahnparty-icfp2014,
+    base, array, lens, mtl >= 2.2, HUnit-Plus
