GCC: add assembler.

--- a/haskell/lahnparty-icfp2014.cabal
+++ b/haskell/lahnparty-icfp2014.cabal
@@ -13,6 +13,7 @@ library
   exposed-modules:
     LahnParty.GCC,
     LahnParty.GCC.Syntax,
+    LahnParty.GCC.Assembler
     LahnParty.GCC.State,
     LahnParty.GCC.Error,
     LahnParty.GCC.Monad,
