GCC: move natsub example to Examples module.

--- a/haskell/lahnparty-icfp2014.cabal
+++ b/haskell/lahnparty-icfp2014.cabal
@@ -18,6 +18,7 @@ library
     LahnParty.GCC.Error,
     LahnParty.GCC.Monad,
     LahnParty.GCC.Exec,
+    LahnParty.GCC.Examples,
     LahnParty.GHC.Syntax,
     LahnParty.GHC.Machine
 
