--- a/haskell/lahnparty-icfp2014.cabal
+++ b/haskell/lahnparty-icfp2014.cabal
@@ -23,6 +23,14 @@ library
     LahnParty.GHC.Syntax,
     LahnParty.GHC.Machine
 
+executable rungcc
+  default-language: Haskell2010
+  hs-source-dirs:   src
+  main-is:          rungcc.hs
+  build-depends:
+    base, array, lens, mtl >= 2.2
+  
+
 test-suite tests
   default-language: Haskell2010
   type:             exitcode-stdio-1.0
